--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
-  sqflite: ^2.3.3+1
-  path_provider: ^2.1.2
-  path: ^1.9.0
+  sqflite: ^2.4.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
   fl_chart: ^0.69.0
 
 dev_dependencies:
